  - Additional documentation in L<Message::Passing::Manual>.

  - Refactor building connection managers so less duplicate code
    is needed in components.

  - Make STDIN input saner.

  - Add an 'error chain' concept, allowing components to have a
    way of reporting connection (or other) issues out of band
    with the message stream.
    This defaults to STDERR, however can be overridden per component,
    or for a whole chain.

  - Add error_log() function to the DSL for setting the error chain up
    for a whole chain.

  - Use the error chain in Message::Passing::Role::ConnectionManager
    to output errors when connections disconnect / timeout / reconnect.

  - Cleanups to Message::Passing::Input::FileTail to not leak processes
    and file handles if the instance of the Input class is destroyed.

0.008
  - Add standard roles to unify the names of connection attributes:
    Message::Passing::Role::HasHostnameAndPort
    Message::Passing::Role::HasUsernameAndPassword

  - Lots of additional documentation.

  - Add STDERR output.

  - Rename the log_chain function to message_chain and run_log_server
    function to run_message_server, in Message::Passing::DSL
    to follow the general rename, as we're not just about logs.

0.007
  - Documentation in the message-pass script

  - Add --configfile option to default script, allowing
    you to load config from a file, rather than supplying
    it on command line.

  - Make JSON encoder pass non refs straight through,
    so that if a previous filter generates a scalar,
    then this gets sent as-is.

  - Make JSON decoder pass refs straight through, to
    act as a no-op if the input has already decoded
    it's data into a hash.

  - Remove spurious warnings from reconnect code.

0.006
  - Rip JSON encoders and decoders out of inputs and
    outputs, making them optional and/or replaceable.
    *NOTE* Current Input / Output code will need updating
    for this change!!
  - Allow Null encoders or decoders.
